<resources>
    <string name="app_name">Travel</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="costs">Costs</string>
    <string name="map_view_confirm">Would you like to travel to the following location?</string>
    <string name="no_airport">No flight chosen</string>
    <string name="change_depart_airport">Change departure airports</string>
    <string name="change_arrive_airport">Change arrival airports</string>
    <string name="from_departure">from departure?</string>
    <string name="add">Add</string>
    <string name="airport">Airport</string>
    <string name="click_to_select_a_flight">Click to select a flight</string>
    <string name="info_unavailable">Information unavailable</string>
    <string name="finding_suggested_hotels">Finding suggested hotels...</string>
    <string name="no_editing_prices_message">To adjust hotel and flight prices, add new expense entry containing the difference, or choose a different hotel/flight</string>
    <string name="click_here_to_see_images"><u>Click here to see images</u></string>
    <string name="itinerary">Itinerary</string>
    <string name="prev_month_arrow"><![CDATA[<-]]></string>
    <string name="next_month_arrow"><![CDATA[->]]></string>
    <string name="flight_type">flight type</string>
    <string name="outbound_instructions">Click to select a flight. Confirm your ticket selection on Inbound Flights page.</string>
    <string name="outbound">Outbound</string>
    <string name="inbound">Inbound</string>
    <string name="is_roundtrip">Roundtrip tickets:</string>
    <string name="is_one_way">One-way tickets:</string>
    <string name="no_tickets_selected">No tickets selected:</string>
    <string name="search_by_keyword">Search by keyword</string>
    <string name="destinations">Destinations</string>
    <string name="no_hotel">No hotel chosen.</string>
    <string name="chosen_hotel">Chosen hotel:</string>
    <string name="filter_by_keyword">Filter by keyword</string>
    <string name="activity_type">Restaurant/Tourist Spot</string>
    <string name="enter_airport">Enter airport</string>
    <string name="search">Search</string>
    <string name="chosen_airports">Chosen airports</string>
    <string name="clear_all">Clear All</string>
    <string name="no_hotel_chosen">No hotel chosen.</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="cost">Cost</string>
    <string name="n_a">N/A</string>
    <string name="chosen_activities">Chosen Activities:</string>
    <string name="name">Name:</string>
    <string name="add_event_name">Add event name</string>
    <string name="date">Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="associate_with_destination">Associate with destination</string>
    <string name="save">Save</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="select_departure_airports">Select Departure Airports</string>
    <string name="select_arrival_airports">Select Arrival Airports</string>
    <string name="see_one_way_tickets">See One-way Tickets</string>
    <string name="see_roundtrip_tickets">See Roundtrip Tickets</string>
    <string name="select_a_hotel">Select a hotel</string>
    <string name="select">Select</string>
    <string name="checkin">Checkin:</string>
    <string name="checkout">Checkout:</string>
    <string name="beds">Beds:</string>
    <string name="cost_label">Cost:</string>
    <string name="sort_by">Sort by:</string>
    <string name="confirm">Confirm</string>
    <string name="filter_by_suggested_activity_categories">Filter by suggested activity categories</string>
    <string name="filter_by_transportation_type">Filter by transportation type</string>
    <string name="month_year_placeholder">July 2021</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="no_outbound_flight_chosen">No Outbound Flight Chosen</string>
    <string name="no_inbound_flight_chosen">No Inbound Flight Chosen</string>
    <string name="souvenirs">Souvenirs</string>
    <string name="money_placeholder">$0.00</string>
    <string name="add_expense">Add expense</string>
    <string name="total">Total</string>
    <string name="week_view">Week View</string>
    <string name="country_placeholder">country</string>
    <string name="date_placeholder">1</string>
    <string name="time_placeholder">10:00 AM</string>
    <string name="event">Event</string>
    <string name="time_range">Time Range</string>
    <string name="expense_name_placeholder">hotel</string>
    <string name="origin">Origin</string>
    <string name="destination_placeholder">Destination</string>
    <string name="airline">Airline</string>
    <string name="date_ticket_placeholder">Date</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="find_activities">Find Activities</string>
    <string name="transportation">Transportation</string>
    <string name="restaurants">Restaurants</string>
    <string name="see_all_plans">See All Plans</string>
    <string name="name_placeholder">Name</string>
    <string name="num_review_placeholder">1 review</string>
    <string name="phone_placeholder">111-111-1111</string>
    <string name="address_placeholder">Address</string>
    <string name="location_placeholder">[location]</string>
    <string name="event_date_placeholder">Jul 25 2021</string>
    <string name="expense_name">Expense Name:</string>
    <string name="event_name">Event Name:</string>
    <string name="delete">Delete</string>
    <string name="edit_event_intent">editing event</string>
    <string name="add_location">Add location</string>
    <string name="jump_to_today">Jump to today</string>
    <string name="previous_month">previous month</string>
    <string name="next_month">next month</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="create_event">Create Event</string>
    <string name="edit_expense">Edit expense</string>
    <string name="delete_expense">Delete expense</string>
    <string name="delete_location">Delete location</string>
    <string name="travel">Travel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="empty_phone_number">(xxx) - xxx - xxxx</string>
    <string name="review">Review</string>
    <string name="place_id">PlaceID</string>
    <string name="business_hours">Business Hours</string>
    <string name="monday_hours">Mon:</string>
    <string name="tuesday_hours">Tues:</string>
    <string name="wednesday_hours">Wed:</string>
    <string name="thursday_hours">Thu:</string>
    <string name="friday_hours">Fri:</string>
    <string name="saturday_hours">Sat:</string>
    <string name="sunday_hours">Sun:</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
</resources>