<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_locations"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/destinations"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_itinerary"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:enabled="true"
        android:title="@string/itinerary"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_costs"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/costs"
        app:showAsAction="always" />
</menu>