<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvExpenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_name"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etExpenseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvExpenseName"
        android:hint="@string/souvenirs"
        android:gravity="center"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/tvCostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etExpenseName"
        android:layout_marginTop="8dp"
        android:text="@string/cost_label"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etExpenseCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCostLabel"
        android:layout_alignParentStart="true"
        android:hint="@string/money_placeholder"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textColor="#000000" />
</RelativeLayout>