<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    tools:context=".activities.SignupActivity">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="253dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:transitionName="icon"
        android:src="@drawable/no_background_travel"
        app:tint="@color/brown" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/ivIcon"
        android:layout_marginTop="-70dp"
        android:transitionName="name"
        android:text="@string/travel"
        android:textSize="60sp"
        android:textColor="@color/brown"
        android:fontFamily="@font/covered_by_your_grace"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/llName"
        android:layout_below="@id/tvLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/first_name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/llName"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/etEmail"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/empty_phone_number" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/etPhone"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:transitionName="signup_button"
        android:text="@string/signup" />
</RelativeLayout>