<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionName="to_create_event_transition"
    android:paddingStart="16dp"
    tools:context=".activities.CreateEventActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@id/tvEventDate"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/add_event_name"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEventName"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/ivDropDownArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnSelectDate"
        android:layout_alignEnd="@id/btnSelectDate"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
        app:tint="@color/brown" />

    <Button
        android:id="@+id/btnSelectDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEventName"
        android:layout_toEndOf="@id/tvEventTime"
        android:layout_marginTop="13dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@android:color/transparent"
        android:textSize="20sp"
        android:text="@string/event_date_placeholder"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/tvEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_below="@id/tvEventDate"
        android:text="@string/start_time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSelectTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSelectDate"
        android:layout_toEndOf="@id/tvEventTime"
        android:layout_marginTop="13dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@android:color/transparent"
        android:textSize="20sp"
        android:text="@string/_12_00_pm"
        android:textAlignment="textStart" />

    <TextView
        android:id="@+id/tvEventEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_below="@id/tvEventTime"
        android:text="@string/end_time"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btnSelectEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSelectTime"
        android:layout_toEndOf="@id/tvEventTime"
        android:layout_marginTop="13dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@android:color/transparent"
        android:textSize="20sp"
        android:text="@string/_12_00_pm"
        android:textAlignment="textStart" />

    <CheckBox
        android:id="@+id/cbDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEventEndTime"
        android:layout_marginTop="36dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/associate_with_destination" />

    <Spinner
        android:id="@+id/destination_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbDestination"
        android:layout_marginTop="13dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:textSize="20sp" />

</RelativeLayout>