<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvAirportName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/airport"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAddAirport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/tvAirportName"
            android:text="@string/add" />

        <TextView
            android:id="@+id/tvAirportCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAirportName"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:text="@string/country_placeholder" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>