<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivPicture"
            android:layout_marginStart="8dp"
            android:text="@string/name_placeholder"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/ivUserRating"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_below="@id/tvUsername"
            android:layout_toEndOf="@id/ivPicture"
            android:layout_marginStart="8dp"
            android:src="@drawable/stars_extra_large_0" />

        <TextView
            android:id="@+id/tvRatingDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivUserRating"
            android:layout_below="@id/tvUsername"
            android:layout_marginTop="1dp"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:text="@string/event_date_placeholder"/>

        <TextView
            android:id="@+id/tvReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivUserRating"
            android:layout_toEndOf="@id/ivPicture"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:text="@string/review"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>