<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:padding="16dp"
    tools:context=".activities.ChooseFlightActivity">

    <include
        android:id="@+id/card_view"
        layout="@layout/item_flight"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFlights"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/spinnerSortBy"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConfirm"
        android:layout_marginTop="3dp"
        android:layout_toStartOf="@id/spinnerSortBy"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:text="@string/sort_by" />

    <Spinner
        android:id="@+id/spinnerSortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnConfirm"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp" />

    <TextView
        android:id="@+id/tvDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="5dp"
        android:text="@string/click_to_select_a_flight" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_below="@id/card_view"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:backgroundTint="@color/quantum_grey"
        android:text="@string/confirm"
        android:textSize="10sp" />

    <ProgressBar
        android:id="@+id/pbFlights"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rvFlights"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="235dp"
        android:visibility="gone" />

</RelativeLayout>